--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <title>Sunnyside agency landing page</title>
+  <title>Sunnyside Agency Landing Page</title>
 
 </head>
 
